--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <link rel="icon" href="assets/images/avatar/avatar 1.svg" type="image/svg">
     <script src="assets/js/counter.js"></script>
-    <meta name="p:domain_verify" content="9d55e8ad2e83d81e626eaf68b3cd30ce"/>
+    <!-- <meta name="p:domain_verify" content="9d55e8ad2e83d81e626eaf68b3cd30ce"/> -->
   </head>
   <body class="is-preload" style="background: #000">
     <div id="wrapper">
